@@ -114,6 +114,7 @@ Major API changes since 0.5.2
 
  * FTPServer class:
    - max_cons attribute defaults to 512 by default instead of 0 (unlimited).
+   - server_forever()'s map argument is gone.
 
  * DummyAuthorizer:
    - ValueError exceptions are now raised instead of AuthorizerError.
